--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,19 @@
+.container-1 {
+  border: solid;
+}
+
 .flex-box-container-1 {
   display: flex;
   border: 1px solid;
   padding: 10px;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-around;
 }
 
 .flex-box-container-1 div {
+  display: flex;
   padding: 10px;
   border: 1px solid;
+  align-items: center;
 }
