--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@
   justify-content: space-around;
 }
 
-.flex-box-container-1 div {
+.contain div {
   display: flex;
   padding: 10px;
   border: 1px solid;
