--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,13 @@
-.container-1, .container-2 {
+.container-1,
+.container-2 {
   border: solid;
   width: 75%;
   margin: 0 auto;
   text-align: center;
 }
 
-.flex-box-container-1, .flex-box-container-2{
+.flex-box-container-1,
+.flex-box-container-2 {
   display: flex;
   border: 1px solid;
   padding: 10px;
@@ -14,17 +16,15 @@
   justify-content: space-around;
 }
 
-/* .flex-box-container-2 {
-  display: flex;
-  border: 1px solid;
-  padding: 10px;
-  justify-content:  space-around;
-} */
+.flex-box-container-2 img {
+  border: 2px solid;
+  margin: 10px;
+}
 
-.contain-1 div, .contain-2 div {
+.contain-1 div,
+.contain-2 div {
   display: flex;
   padding: 10px;
   border: 1px solid;
   align-items: center;
 }
-
