--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 .container-1,
-.container-2 {
+.container-2,
+.container-3 {
   border: solid;
   width: 75%;
   margin: 0 auto;
@@ -7,7 +8,8 @@
 }
 
 .flex-box-container-1,
-.flex-box-container-2 {
+.flex-box-container-2,
+.flex-box-rps {
   display: flex;
   border: 1px solid;
   padding: 10px;
@@ -28,4 +30,12 @@
   padding: 10px;
   border: 1px solid;
   align-items: center;
+}
+
+.flex-box-rps img {
+  border-radius: 50%;
+}
+
+.flex-box-rps img:hover {
+  box-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
 }
