--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 .container-1,
 .container-2,
 .container-3,
-.container-4 {
+.container-4,
+.container-5 {
   border: solid;
   width: 75%;
   margin: 0 auto;
@@ -11,13 +12,51 @@
 .flex-box-container-1,
 .flex-box-container-2,
 .flex-box-rps,
-.flex-box-pick-color {
+.flex-box-pick-color,
+.flex-blackjack-row-1,
+.flex-blackjack-row-2,
+.flex-blackjack-row-3 {
   display: flex;
   border: 1px solid;
   padding: 10px;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
+}
+
+.flex-blackjack-row-1, .flex-blackjack-row-2 {
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVZcmxhHznIosHm28FGOzzhIi9wh3Tt8weSA&usqp=CAU");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #ffffff;
+}
+.flex-blackjack-row-1 div {
+  border: 1px solid black;
+  flex: 1;
+  padding: 10px;
+  height: 350px;
+  text-align: center;
+}
+
+.flex-blackjack-row-1 img{
+  width: 25%;
+  padding: 10px;
+}
+
+.flex-blackjack-row-2 button{
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.flex-blackjack-row-2 div{
+  border: 1px solid black;
+  padding: 10px;
+}
+
+table, th, td{
+  border: 1px solid black;
+  padding: 5px;
 }
 
 .flex-box-container-2 img {
